# Jonathan-React-AskBucky

./: Makefile  README 2.md  README.md  askbucky.yml  docker-commands.txt  docker-compose 2.yml  package-lock.json  todo.txt
deployment/: configmap-example.yml  configmap.yml  deployment-server.yml  deployment-ui.yml  role-binding.yml  role.yml  service-server.yml  service-ui.yml  serviceaccount.yml  start_minikube.sh
deployment/nginx/: nginx.conf  nginx_start.sh
dockerfiles/server/: server.dockerfile  start.sh
dockerfiles/ui/: install_packages.sh  ui.dockerfile
server/: pyproject.toml
server/app/: betas.py  context_window.py  converse.py  db.py  main.py  respond.py
server/app/auth/: app.py  sqlite_db
server/app/scrape/: embed.py  rag.py  recurse.py
server/app/sql_db/: simplethread.py  sqlexample.py  sqlread.py  template.json  template_example.json  thread.db
ui/: package.json
ui/public/: index.html  manifest.json
ui/src/: App.js  Home.css  Home.js
ui/src/background-gradients/: Aurora.css  DayNight.css  Default.css  Fall.css  Leaves.css  Ocean.css  SCU.css  themes.json
ui/src/components/: Background.jsx  ChatButton.jsx  ChatCodeBlock.jsx  ChatHistory.jsx  Chatbox.jsx  DarkModeButton.jsx  Infobar.jsx  NewChatButton.jsx  PluginsButton.jsx  ProfileButton.jsx  Searchbar.jsx  Sidebar.jsx  ThemeButton.jsx  ThemeManager.jsx
ui/src/styles/: Background.css  ChatButton.css  ChatCodeBlock.css  ChatHistory.css  Chatbox.css  ColorHex.json  DarkModeButton.css  Infobar.css  NewChatButton.css  PluginsButton.css  ProfileButton.css  Searchbar.css  Sidebar.css  (+2 more)
