[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Joshua Jerome <joshua.jerome@gmail.com>"]
readme = "README.md"
include = ["auth", "scrape", "sql_db"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.3.5"
chromadb = "^0.4.18"
python-dotenv = "^1.0.0"
gradio = "^4.7.1"
tiktoken = "^0.5.1"
pypdf = "^3.17.1"
bs4 = "^0.0.1"
html5lib = "^1.1"
flask = "^3.0.0"
flask-cors = "^4.0.0"
flask-socketio = "^5.3.6"
debugpy = "^1.8.0"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
